# Kokomi

./: .gitmodules  Cargo.toml
crates/kokomi/: Cargo.toml
crates/kokomi-core/: Cargo.toml
crates/kokomi-core/src/: config.rs  global.rs  lib.rs  macros.rs  utils.rs
crates/kokomi/src/: consts.rs  main.rs  state.rs
crates/kokomi/src/router/: completion.rs  event.rs  health.rs  mod.rs  model.rs
