[package]
name = "kokomi"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akira = { path = "../../crates/akira", features = ["cuda"] }
kokomi-core = { path = "../../crates/kokomi-core" }
tokio = { version = "1.35.1", features = ["full"] }
colored = "2.1.0"
axum = "0.7.3"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
